Added all features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="ui_login_validation_error">Invalid e-mail or password.</string>
     <string name="ui_login_response_error">Wrong e-mail or password.</string>
     <string name="ui_list_create_button_content_description">Create new reminder</string>
+    <string name="ui_list_type_daily">Daily</string>
+    <string name="ui_list_type_weekly">Weekly</string>
     <string name="ui_addedit_title_hint">Reminder Title</string>
     <string name="ui_addedit_description_hint">Reminder Description</string>
     <string name="ui_addedit_button_save">Save</string>
@@ -18,4 +20,7 @@
     <string name="ui_addedit_delete_success">Delete success</string>
     <string name="ui_addedit_radio_daily">Remind Daily</string>
     <string name="ui_addedit_radio_weekly">Remind Weekly</string>
+    <string name="notification_channel_name">Alarm</string>
+    <string name="notification_channel_description">This channel will show alarms</string>
+
 </resources>
